fix: horizontal scroll remove (Sun, Mar 12, 2023 20:43 PM)

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #f2f3f5;
     margin: 3rem auto;
     padding: 0;
